2009-11-19  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        Remove HAVE(FLOAT_H) guard
        https://bugs.webkit.org/show_bug.cgi?id=31661

        JavaScriptCore has a dependency on float.h, there is
        no need to guard float.h.

        * runtime/DatePrototype.cpp: Remove include directive 
        for float.h as it is included in MathExtras.h already.
        * runtime/Operations.cpp: Ditto.
        * runtime/UString.cpp: Ditto.
        * wtf/dtoa.cpp: Ditto.
        * wtf/MathExtras.h: Remove HAVE(FLOAT_H) guard.
        * wtf/Platform.h: Ditto.

2009-11-19  Thiago Macieira <thiago.macieira@nokia.com>

        Reviewed by Simon Hausmann.

        Build fix for 32-bit Sparc machines: these machines are big-endian.

        * wtf/Platform.h:

2009-11-18  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove support for Qt v4.3 or older versions
        https://bugs.webkit.org/show_bug.cgi?id=29469

        * JavaScriptCore.pro:
        * jsc.pro:
        * wtf/unicode/qt4/UnicodeQt4.h:

2009-11-18  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Move UString::from(double) implementation to new
        WTF::doubleToStringInJavaScriptFormat(), and expose it because WebCore
        code will use it.
        https://bugs.webkit.org/show_bug.cgi?id=31330

        - Introduce new function createRep(const char*, unsigned) and
          UString::UString(const char*, unsigned) to reduce 2 calls to strlen().
        - Fix a bug that dtoa() doesn't update *rve if the input value is NaN
          or Infinity.

        No new tests because this doesn't change the behavior.

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * runtime/UString.cpp:
        (JSC::createRep):
        (JSC::UString::UString):
        (JSC::UString::from): Move the code to doubleToStringInJavaScriptFormat().